[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-cyberthreats"
version = "0.1.1"
description = "MCP-powered cloud architecture security reviewer backed by live CISA threat intelligence"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "Srinivas Madichetti" },
]
keywords = [
    "security",
    "mcp",
    "cisa",
    "kev",
    "cloud-security",
    "threat-intelligence",
    "architecture-review",
    "llm",
    "streamlit",
    "langgraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.49.0",
    "fastmcp>=3.1.0",
    "google-genai>=1.0.0",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "langsmith>=0.7.16",
    "mcp>=1.26.0",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]

[project.urls]
Homepage = "https://github.com/madichetti/mcp-server-cyberthreats"
Repository = "https://github.com/madichetti/mcp-server-cyberthreats"
"Bug Tracker" = "https://github.com/madichetti/mcp-server-cyberthreats/issues"
Documentation = "https://github.com/madichetti/mcp-server-cyberthreats#readme"

[project.scripts]
mcp-server-cyberthreats     = "mcp_server_cyberthreats:run_app"
mcp-server-cyberthreats-mcp = "mcp_server_cyberthreats.mcp.server:run_mcp_server"

[tool.setuptools.packages.find]
where = ["src"]
